<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cosinaActivity">

    <TextView
        android:id="@+id/txVentana"
        android:layout_width="276dp"
        android:layout_height="26dp"
        android:text="@string/bookingtime_ventana_reservas"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardMenu"
        android:layout_width="234dp"
        android:layout_height="89dp"
        android:layout_marginTop="2dp"
        app:cardBackgroundColor="@android:color/holo_blue_bright"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txVentana"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="42dp"
            android:layout_height="22dp"
            android:layout_marginStart="24dp"
            android:text="@string/menu" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="95dp"
            android:layout_height="26dp"
            android:layout_marginStart="24dp"
            android:text="@string/mesa_n" />

        <TextView
            android:id="@+id/numMesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="137dp"
            android:layout_height="19dp"
            android:text="@string/menu_1" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>